# flax-trainer

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
flax_trainer/: evaluator.py  loader.py  logger.py  loss_fn.py  trainer.py
flax_trainer/model/: mlp.py
notebook/: 00_REGRESSION.ipynb
