[project]
name = "flax-trainer"
version = "1.4.0"
description = ""
authors = [
    {name = "Kai Sugahara",email = "contact@kais.jp"}
]
readme = "README.md"
requires-python = ">=3.11"
license="Apache-2.0"
dependencies = [
    "polars (>=1.22.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jax (>=0.5.0,<0.6.0)",
    "jaxlib (>=0.5.0,<0.6.0)",
    "flax (>=0.10.3,<0.11.0)",
    "optax (>=0.2.4,<0.3.0)",
    "mlflow (>=2.20.2,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.9.7"
scikit-learn = "^1.6.1"

[[tool.poetry.source]]
name = "libtpu"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
priority = "supplemental"

[project.optional-dependencies]
cuda12 = ["jax[cuda12] (>=0.5.0,<0.6.0)"]
tpu = ["jax[tpu] (>=0.5.0,<0.6.0)"]
metal = ["jax-metal (>=0.1.1,<0.2.0)"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
